*Empty MediaWiki Message*

--- a/Wlad_Brahim_(Ssɛida).mw
+++ b/Wlad_Brahim_(Ssɛida).mw
@@ -1,2 +1,3 @@
+{{Databox}}
 '''Wlad Brahim''' (s tefrensist: ''Ouled Brahim''), d taɣiwant n twilayt n [[Ssɛida]]. Zedɣen-tt 19.711 n yimezdaɣen. 
 [[Category:Taɣiwant n twilayt n Ssɛida]]
