*Empty MediaWiki Message*

--- a/Ninh_Binh.mw
+++ b/Ninh_Binh.mw
@@ -1,4 +1,4 @@
-[[Tugna:Phatdiemk-77.jpg|300px|right|thumb|Ninh Binh]]
-Tamanaɣt n tmurt n [[Dong Bang Song Hong]], [[Vietnam]]. Tettwassen s isem n temdint n tafat.
+{{Databox}}
+'''Ninh Binh''' d tamanaɣt n tmurt n [[Dong Bang Song Hong]], [[Vietnam]]. Tettwassen s isem n temdint n tafat.
 
 [[Taggayt:Vietnam]]
