--- a/Star_Wars.mw
+++ b/Star_Wars.mw
@@ -1,4 +1,4 @@
-[[Tugna:Star Wars Logo.svg|thumbnail|Star Wars Logo.svg]]
+{{Databox}}
 '''Star Wars''' ur n i fkan tawtilt imi seg later atan mazal azaran ahat kecmen talalit uqbel [[Darth Vader]] azal ar n [[Lucasfilm]] d wid akk anda [[George Lucas]].
 
 [[Category:Star Wars]]
