*Empty MediaWiki Message*

--- a/François_Hollande.mw
+++ b/François_Hollande.mw
@@ -1,5 +1,5 @@
 {{Infobox biography}}
-'''François Hollande'''' d aselway n [[Fransa]] seg [[2012]] ar [[2017]] seg [[Akabar Anemlay n Fransa|Ukabar Anemlay n Fransa]]. 
+'''François Hollande''' d aselway n [[Fransa]] seg [[2012]] ar [[2017]] seg [[Akabar Anemlay n Fransa|Ukabar Anemlay n Fransa]]. 
 
 [[Taggayt:Tameddurt]]
 [[Taggayt:Isertayen Ifṛensisen|Hollande, François]]
