--- a/Aẓeffun.mw
+++ b/Aẓeffun.mw
@@ -1,7 +1,6 @@
 {{Infobox city}}
 
-'''Aẓeffun''' d taɣiwant n ugafa (nord) n [[Tizi Wezzu]], ɣef yiri n yilel. Zedɣen-tt 16.096 n yimezdaɣen. Deg tallit n tuṭṭfa tafṛensist llan ɣɣaren-as ''Port-Gueydon''.
-
+'''Aẓeffun''' d [[taɣiwant]] id yezgan deg ugafa  n [[Tizi Wezzu]], ɣef yiri n yilel. Zedɣen-tt 16.096 n yimezdaɣen. Deg tallit n tuṭṭfa tafṛensist llan ɣɣaren-as ''Port-Gueydon''.
 
 === Asideg (timella) ===
 
