*Empty MediaWiki Message*

--- a/Acafcal_azegzaw.mw
+++ b/Acafcal_azegzaw.mw
@@ -1,9 +1,6 @@
 [[Tugna:Alnitak_sun_comparision-de.svg|thumb|250px|Asemzazal gar N tsekta n ucafcal azegzaw amnummes am [[Alnitak]] d [[tafukt|tfukt]]]]
 
-'''Acafcal azegzaw''' neɣ '''Atilat azegzaw''' d talmest n [[itri|yetran]] ilan [[Takura]] meqrren s waṭas imi takura-ynes tettawaṭ ar wazal n 20 ar 100 tkuriwin tinafukin, Ma d [[taẓɣelt]] n tiggi-ynes ar 35000 neɣ ugar, akken daɣen i tla (i tesɛa) [[asfijjej (tasnallunt)|asfijjej]] yuddsen (iqewwan) s waṭas
-
-☉
-<sub>☉</sub>
+'''Acafcal azegzaw''' neɣ '''Atilat azegzaw''' d talmest n [[itri|yetran]] ilan [[Takura]] meqrren s waṭas imi takura-ynes tettawaṭ ar wazal n 20 ar 100 tkuriwin tinafukin, Ma d [[taẓɣelt]] n tiggi-ynes ar 35000 neɣ ugar, akken daɣen i tla (i tesɛa) [[asfijjej (tasnallunt)|asfijjej]] yuddsen (iqewwan) s waṭas.
 
 == Imedyaten ==
 
@@ -34,4 +31,4 @@
 | align="right" | 11&nbsp;''R<sub>☉</sub>'' || 57.500&nbsp;''L<sub>☉</sub>''
 |}
 
-Af tmentilt n temẓi n waddar (leɛmer) n icafcalen izegzawen tilín drus-iten deg tnallunt
+Af tmentilt n temẓi n waddar (leɛmer) n icafcalen izegzawen tilín drus-iten deg tnallunt.
