--- a/Taferkit.mw
+++ b/Taferkit.mw
@@ -1,9 +1,1 @@
-[[Tugna:Paper_sheet.jpg|thumb|250px|Tiferkit (tafrawt)]]
-
-'''Taferkit''' d tanga tusdidt (rqiqen) id yettwakkasen seg [[agilim n tferkit|ugilim n tferkit]]
-
-== Amezruy n tferkit ==
-
-== Tamugri n tferkit ==
-
-== Tilmas n tferkit ==
+#REDIRECT [[Lkaɣeḍ]]
