*Empty MediaWiki Message*

--- a/Iseɛdiyen.mw
+++ b/Iseɛdiyen.mw
@@ -1,3 +1,4 @@
+{{Databox}}
 '''Iseɛdiyen''' (asuf: aseɛdi; s tefrensist: Saadiens, saadides), d tawacult ay iḥekmen [[Merruk]] seg [[1554]] arma d [[1603]]. 
 
 ==Imenɣi mgal Irumiyen==
