--- a/Aẓeffun_(aɣersiw).mw
+++ b/Aẓeffun_(aɣersiw).mw
@@ -2,7 +2,7 @@
 '''Aẓeffun''' neɣ '''Azaffan''' ([[Assaɣ ussnan|ar isnudranen]]: ''Nephropidae'', tikwal daɣen ''Homaridae'') d yiwet n [[tawacult|twacult]] meqqren n [[tiruca|truca]] [[ilel|tiwlalin]]
 , Aẓeffun ila (yesɛa) tefekka ɣezzifen, Kṛad (3) gar smus (5) n iṭaren-is lan [[akacbar|ikacbaren]] gar-asen tayuga tamenzut i yettilin d tayuga iy meqqren ɣef tyugiwin id yezgan deffir-is, Aẓeffun yettidir deg ifrxsiyen (lecquq) yakk d isegunen s ddaw n yilel 
 
-Deg [[Agezdu|ugezdu]] n [[Tizi wezzu]] deg [[Tamurt n Leqbayel|Tmurt n Iqbayliyen]] tella yiwet n [[taɣiwant|tɣiwant]] tettusemma ɣef [[aɣersiw|uɣersiw-a]] dɣa awal itezzi ɣef tɣiwant n [[Aẓeffun|Uẓeffun]]
+Deg [[Agezdu|ugezdu]] n [[Tizi Wezzu]] deg [[Tamurt n Leqbayel|Tmurt n Iqbayliyen]] tella yiwet n [[taɣiwant|tɣiwant]] tettusemma ɣef [[aɣersiw|uɣersiw-a]] dɣa awal itezzi ɣef tɣiwant n [[Aẓeffun|Uẓeffun]]
 
 == Aglam ==
 
