--- a/Asismel_n_tesnudert.mw
+++ b/Asismel_n_tesnudert.mw
@@ -11,9 +11,9 @@ S akin, S [[Tanflit|tneflit]] n tussna rnan-t-d kra n tsurta tisnawanin:
 
 * [[Adu-tgelda]]
 
-* [[Astirf (tasnudert)|Astirf]]
+* [[Astirf (tasnudert)|Adur]]
 
-* [[Adu-setrif]]
+* [[Adu-wadur]]
 
 * [[Ifelasmil]]
 
