--- a/Tiruca.mw
+++ b/Tiruca.mw
@@ -4,6 +4,9 @@
 Azal ameqran n truca d tid yettidiren deg [[aman|waman]] aladɣa deg [[ilel|illan]] d [[agaraw|igarawen]] akken daɣen i llant kra n telmas yettidiren deg waman israwen ([[asif|isafen]] d [[agelmim|igelmimen]]) d kra n idem ttidirent sufel n wakal, Tiruca d tid id yettgin tagrawt meqqren n iɣersiwen am [[Tifiraqest|tkurẓmiwin]] d [[aqemrun|uqemrun]] d [[tifenzit|tfenzit]] 
 
 == Asismel ==
+Idem n (''crustacean'') yettuɣal i  yesnudranen imzikanen yakk i weglam n iɣersiwen, gar-asen [[Pierre Belon]] d [[Guillaume Rondelet]] maca isem-a ur yettusxdem ara sɣur kra n imesnulfawen id yusan s deffir am [[Carl Von Linné]] ig sskecmen Tiruca deg ''Aptera'' deg wedlis-is [[anagraw n ugama]]
+
+Adu-wadur n truca yeddem azal n 67,000 n telmas yettwaglamen ayen yettuɣilen d akken ttgin-d kan ​1⁄10 ar ​1⁄100 n yakk telmas n truca acku tuget degsent ur ttwaglament ara ar tura
 
 == Tasnalɣa (morphology) ==
 
