*Empty MediaWiki Message*

--- a/Aɣlal.mw
+++ b/Aɣlal.mw
@@ -1,2 +1,2 @@
 {{Databox}}
-'''Aɛarus''' d yiwen n uɣersiw yesɛan ajeɣlal. Ur yesɛi ara iḍarren.
+'''Aɣlal''' deg [[Taqbaylit|Teqnaylit]] d irem id yemmalen tagrawt n iɣersiwen [[ibeldisen]] ilan (yesɛan) [[ajeɣlal|ijeɣlalen]] i wakken ad aggẓen tifekkiwin-nsen yessalwen, , iɣlalen s umata ttidirent sufell n wakal, S tenmegla n [[Amillus|umillus]] maca gan yakk d [[tigri|tigritin]], Dɣa azal n 40% n tigritin d iɣlalen yettidiren sufel n wakal
