*Empty MediaWiki Message*

--- a/Ibeldisen.mw
+++ b/Ibeldisen.mw
@@ -1,8 +1,8 @@
 {{Automatic taxobox}}
-'''Ibeldisen''' ([[Assaɣ ussnan]]: ''Gastropoda'') d [[asmil (tasnudert)|asmil]] meqqren yakk deg [[astirf (tasnudert)|wadur]] n [[Tigri|tigritin]] acku dges azal n 80% n [[talmest|telmas]] yeṭṭafaren adur-a, akken daɣen i tga d tafesna tameqrant tus snat yakk deg [[aɣersiw|tgelda taɣersawt]] anda i llant dges uzal n 65000 n telmas gar-asent [[aɣlal]] d [[Amillus|umillus]] d [[tazɣurt|tezɣurt]] 
+'''Ibeldisen''' ([[Assaɣ ussnan]]: ''Gastropoda'') d [[asmil (tasnudert)|asmil]] meqqren yakk deg [[astirf (tasnudert)|wadur]] n [[Tigri|tigritin]] acku dges azal n 80% n [[talmest|telmas]] yeṭṭafaren adur-a, akken daɣen i tga d tafesna tameqrant tis snat yakk deg [[aɣersiw|tgelda taɣersawt]] anda i llant dges wazal n 65000 n telmas gar-asent [[aɣlal]] d [[Amillus|umillus]] d [[tazɣurt|tezɣurt]] 
 
 Azal ameqran n ibeldisen lan (sɛan) [[ajeɣlal]] amyiwen ddurayen yis, ijeɣlalen-a ttilin d ubrinen <br/>
-Ibeldisen ttidiren deg waṭas n twennaṭin n umadal, Amur ameqran degsen deg waman anda ugar n 3000 n telmas n ibeldisen ttidiren s ddaw n waman n [[ilel|illan]] d [[agaraw|igarawen]] yakk d 5000 n telmas n idem ttidiren deg [[aman iẓidanen|waman iẓidanen]] ([[asif|isafen]], [[iɣzeṛ|iɣezṛawen]], [[agelmim|igelmimen]]) ma d tilmas id yegran ttidirent sufel n tegnit (lqaɛa), Azal ameqran n ibeldisen tetten [[imɣan]] akken i llant telmas tettent isugar igemnawen akken daɣen i llant kra n telma d [[timseksumin]] yerna gant d [[uɣes|timuɣas]] 
+Ibeldisen ttidiren deg waṭas n twennaṭin n umadal, Amur ameqran degsen deg waman anda ugar n 3000 n telmas n ibeldisen ttidiren s ddaw n waman n [[ilel|illan]] d [[agaraw|igarawen]] yakk d 5000 n telmas n idem ttidiren deg [[aman iẓidanen|waman iẓidanen]] ([[asif|isafen]], [[iɣzeṛ|iɣezṛawen]], [[agelmim|igelmimen]]) ma d tilmas id yegran ttidirent sufel n tegnit (lqaɛa), Azal ameqran n ibeldisen tetten [[imɣan]] akken i llant telmas tettent isugar igemnawen akken daɣen i llant kra n telma d [[timseksumin]] yerna gant d [[uɣes|timuɣas]]
 
 == Agar, tsensartut d usru ==
 
