--- a/Ibeldisen.mw
+++ b/Ibeldisen.mw
@@ -4,7 +4,7 @@
 Azal ameqran n ibeldisen lan (sɛan) [[ajeɣlal]] amyiwen ddurayen yis, ijeɣlalen-a ttilin d ubrinen <br/>
 Ibeldisen ttidiren deg waṭas n twennaṭin n umadal, Amur ameqran degsen deg waman anda ugar n 3000 n telmas n ibeldisen ttidiren s ddaw n waman n [[ilel|illan]] d [[agaraw|igarawen]] yakk d 5000 n telmas n idem ttidiren deg [[aman iẓidanen|waman iẓidanen]] ([[asif|isafen]], [[iɣzeṛ|iɣezṛawen]], [[agelmim|igelmimen]]) ma d tilmas id yegran ttidirent sufel n tegnit (lqaɛa), Azal ameqran n ibeldisen tetten [[imɣan]] akken i llant telmas tettent isugar igemnawen akken daɣen i llant kra n telma d [[timseksumin]] yerna gant d [[uɣes|timuɣas]]
 
-== Agar, tsensartut d usru ==
+== Agar, tasensartut d usru ==
 
 == Ẓeṛ daɣen ==
 * [[Aɣlal]]
