*Empty MediaWiki Message*

--- a/Ibeldisen.mw
+++ b/Ibeldisen.mw
@@ -5,6 +5,15 @@ Azal ameqran n ibeldisen lan (sɛan) [[ajeɣlal]] amyiwen ddurayen yis, ijeɣlal
 Ibeldisen ttidiren deg waṭas n twennaṭin n umadal, Amur ameqran degsen deg waman anda ugar n 3000 n telmas n ibeldisen ttidiren s ddaw n waman n [[ilel|illan]] d [[agaraw|igarawen]] yakk d 5000 n telmas n idem ttidiren deg [[aman iẓidanen|waman iẓidanen]] ([[asif|isafen]], [[iɣzeṛ|iɣezṛawen]], [[agelmim|igelmimen]]) ma d tilmas id yegran ttidirent sufel n tegnit (lqaɛa), Azal ameqran n ibeldisen tetten [[imɣan]] akken i llant telmas tettent isugar igemnawen akken daɣen i llant kra n telma d [[timseksumin]] yerna gant d [[uɣes|timuɣas]]
 
 == Agar, tasensartut d usru ==
+'''tasnasileɣt''': 
+
+[[Tugna:Fichier:Viviparus contectus circulatory system.png|thumb|270px|Anagraw n usikel n (''Viviparus contectus'')]]
+
+Ibeldisen s umata d iɣersiwen irazamalen (''asymétriques'') anda tafekka-ynes tebṭa ar 3 n ismilen ufrizen: 
+
+* Ar zdat, ixef deg tazwara-s llant [[timerna|tmerna]] dɣa deg taggara-nsent i llant wallen 
+* S adis, Aṭar yessehrin deg uṭebsi, tikwal yettuɣal d agman i [[ardab|werdab]] 
+* S azagur, Takura tedduffes, tikwal d tamazzuft maca deg waṭas n wakuden yezzi-yas ujeɣlal
 
 == Ẓeṛ daɣen ==
 * [[Aɣlal]]
