*Empty MediaWiki Message*

--- a/Ibeldisen.mw
+++ b/Ibeldisen.mw
@@ -7,7 +7,7 @@ Ibeldisen ttidiren deg waṭas n twennaṭin n umadal, Amur ameqran degsen deg w
 == Agar, tasensartut d usru ==
 '''tasnasileɣt''': 
 
-[[Tugna:Fichier:Viviparus contectus circulatory system.png|thumb|270px|Anagraw n usikel n (''Viviparus contectus'')]]
+[[Tugna:Viviparus contectus circulatory system.png|thumb|270px|Anagraw n usikel n (''Viviparus contectus'')]]
 
 Ibeldisen s umata d iɣersiwen irazamalen (''asymétriques'') anda tafekka-ynes tebṭa ar 3 n ismilen ufrizen: 
 
