*Empty MediaWiki Message*

--- a/Ibeldisen.mw
+++ b/Ibeldisen.mw
@@ -15,6 +15,8 @@ Ibeldisen s umata d iɣersiwen irazamalen (''asymétriques'') anda tafekka-ynes 
 * S adis, Aṭar yessehrin deg uṭebsi, tikwal yettuɣal d agman i [[ardab|werdab]] 
 * S azagur, Takura tedduffes, tikwal d tamazzuft maca deg waṭas n wakuden yezzi-yas ujeɣlal
 
+[[Tigri|tigritin-a]] gant d [[ayenuzzuf|tiynuzufin]] neɣ [[tiberrawtemt|iberwetmen]], [[Timseddert]] neɣ [[tamarrawt]]
+
 == Ẓeṛ daɣen ==
 * [[Aɣlal]]
 * [[Tiruca]]
