/* Agar, tasensartut d usru */

--- a/Ibeldisen.mw
+++ b/Ibeldisen.mw
@@ -17,6 +17,11 @@ Ibeldisen s umata d iɣersiwen irazamalen (''asymétriques'') anda tafekka-ynes 
 
 [[Tigri|tigritin-a]] gant d [[ayenuzzuf|tiynuzufin]] neɣ [[tiberrawtemt|iberwetmen]], [[Timseddert]] neɣ [[tamarrawt]]
 
+'''Amyaraw'''
+Tuget neɣ azal ameqran n ibeldisen gan d [[Abrawtem|iberwetmen]], isin n talwiyin ttmiqqanen tisiqsin-nsen w ttembadalen [[Agamit|igamiten]] n [[awtem|iwetmen]] s akin ad asen igamiten n [[tawtemt|twetmin]] i wakken [[arruw|ad myarrwen]] 
+
+[[Tugna:Kissingsnails.jpg|thumb|260px|sin n [[aɣlal|yiɣlalen]] temyussanen send ma ad [[amercel|mmircalen]]]]
+
 == Ẓeṛ daɣen ==
 * [[Aɣlal]]
 * [[Tiruca]]
