--- a/Ibeldisen.mw
+++ b/Ibeldisen.mw
@@ -4,7 +4,7 @@
 Azal ameqran n ibeldisen lan (sɛan) [[ajeɣlal]] amyiwen ddurayen yis, ijeɣlalen-a ttilin d ubrinen <br/>
 Ibeldisen ttidiren deg waṭas n twennaṭin n umadal, Amur ameqran degsen deg waman anda ugar n 3000 n telmas n ibeldisen ttidiren s ddaw n waman n [[ilel|illan]] d [[agaraw|igarawen]] yakk d 5000 n telmas n idem ttidiren deg [[aman iẓidanen|waman iẓidanen]] ([[asif|isafen]], [[iɣzeṛ|iɣezṛawen]], [[agelmim|igelmimen]]) ma d tilmas id yegran ttidirent sufel n tegnit (lqaɛa), Azal ameqran n ibeldisen tetten [[imɣan]] akken i llant telmas tettent isugar igemnawen akken daɣen i llant kra n telma d [[timseksumin]] yerna gant d [[uɣes|timuɣas]]
 
-== Agar, tasensartut d usru ==
+== Aglam ==
 '''tasnasileɣt''': 
 
 [[Tugna:Viviparus contectus circulatory system.png|thumb|270px|Anagraw n usikel n (''Viviparus contectus'')]]
@@ -21,6 +21,8 @@ Ibeldisen s umata d iɣersiwen irazamalen (''asymétriques'') anda tafekka-ynes 
 Tuget neɣ azal ameqran n ibeldisen gan d [[Abrawtem|iberwetmen]], isin n talwiyin ttmiqqanen tisiqsin-nsen w ttembadalen [[Agamit|igamiten]] n [[awtem|iwetmen]] s akin ad asen igamiten n [[tawtemt|twetmin]] i wakken [[arruw|ad myarrwen]] 
 
 [[Tugna:Kissingsnails.jpg|thumb|260px|sin n [[aɣlal|yiɣlalen]] temyussanen send ma ad [[amercel|mmircalen]]]]
+
+== Agar, tasensartut d usru ==
 
 == Ẓeṛ daɣen ==
 * [[Aɣlal]]
