*Empty MediaWiki Message*

--- a/Ibeldisen.mw
+++ b/Ibeldisen.mw
@@ -24,6 +24,19 @@ Tuget neɣ azal ameqran n ibeldisen gan d [[Abrawtem|iberwetmen]], isin n talwiy
 
 == Agar, tasensartut d usru ==
 
+=== Amezruy amhazan ===
+Ibeldisen gan d tagrawt taɣersawt tameqrant yakk seld n [[aburɣas|iburɣas]] anda llant 40000 n telmas d timiddurin, banen-d ɣer tudert send n 600 [[ms]], akken igan d [[Tigri|tigritin]] timyiwnin iy sselken tagnit imedlen, Amezruy amhazan n ibeldisen yettwassnen s [[tamhazt|temhazt]] n talɣa n [[ajeɣlal|ijeɣlalen-nsen]] 
+
+=== Tasensartur ===
+Irem n ''Gasteropoda'' (igan d [[assaɣ ussnan]] n ibeldisen) yekka-d seg sin n wawalen [[tagrikt tamzikt|igriken]] γαστήρ (gastêr), « Adis », d πούς (poús), « Aṭar »
+
+=== Agar ===
+
+=== Asismel amensay ===
+Deg usismel amzikan (aqbur), amedya deg wagla n  [[Johannes Thiele]] (1929-1935), llan 3 n [[adu-smil|idu-smilen]] ibuda: 
+
+* [[Ifeckdaten]] (''Prosobranchia''): d iɣersiwen [[ilel|iwlalen]], lan (sɛan) [[Afuck|iɣenwazen]] deg tazwara n tfekka s idem n wul
+
 == Ẓeṛ daɣen ==
 * [[Aɣlal]]
 * [[Tiruca]]
