*Empty MediaWiki Message*

--- a/Ibeldisen.mw
+++ b/Ibeldisen.mw
@@ -35,7 +35,7 @@ Irem n ''Gasteropoda'' (igan d [[assaɣ ussnan]] n ibeldisen) yekka-d seg sin n 
 === Asismel amensay ===
 Deg usismel amzikan (aqbur), amedya deg wagla n  [[Johannes Thiele]] (1929-1935), llan 3 n [[adu-smil|idu-smilen]] ibuda: 
 
-* [[Ifeckdaten]] (''Prosobranchia''): d iɣersiwen [[ilel|iwlalen]], lan (sɛan) [[Afuck|iɣenwazen]] deg tazwara n tfekka s idem n wul
+* [[Ifeckdaten]] (''Prosobranchia''): d iɣersiwen [[ilel|iwlalen]], lan (sɛan) [[Afuck|iɣenwazen]] deg tazwara n tfekka s udem n wul
 
 == Ẓeṛ daɣen ==
 * [[Aɣlal]]
