--- a/Ibeldisen.mw
+++ b/Ibeldisen.mw
@@ -35,7 +35,9 @@ Irem n ''Gasteropoda'' (igan d [[assaɣ ussnan]] n ibeldisen) yekka-d seg sin n 
 === Asismel amensay ===
 Deg usismel amzikan (aqbur), amedya deg wagla n  [[Johannes Thiele]] (1929-1935), llan 3 n [[adu-smil|idu-smilen]] ibuda: 
 
-* [[Ifeckdaten]] (''Prosobranchia''): d iɣersiwen [[ilel|iwlalen]], lan (sɛan) [[Afuck|iɣenwazen]] deg tazwara n tfekka s udem n wul
+* [[Ifeckdaten]] (''Prosobranchia''): d iɣersiwen [[ilel|iwlalen]], lan (sɛan) [[Afuck|iɣenwazen]] deg tazwara (zdat) n tfekka s udem n wul
+* [[Ifeckdfiren]] (''Opisthobranchia''): Yakk nsen d iwlalen, lan (sɛan) [[afuck]] (iɣenwazen) s deffir n tfekka, Am [[tiferdarin]] (''Pteropoda'') i [[Assezgi|yessezgen]] ar tudert tassuflant 
+* [[Tinturin]] (''Pulmonata''): Ilan (yesɛan) [[turin]] (aberfiw) deg yideg n ifecka maca kra deg-sent (am [[Alemnis|ilemnisen]]) uɣalen ar tudert deg waman
 
 == Ẓeṛ daɣen ==
 * [[Aɣlal]]
