*Empty MediaWiki Message*

--- a/Tutlayt_tacelḥit.mw
+++ b/Tutlayt_tacelḥit.mw
@@ -13,9 +13,9 @@
 | fam4 = [[Tutlayin timaziɣin n waṭlas|Aṭlas]]
 | iso3 = shi
 | map = Tachelhit.png
-| mapcaption = {{legend|#F00000|Asideg n Tacelḥit deg [[Merruk]]}}
+| mapcaption = {{legend|#F00000|Asideg n Tsusit deg [[Merruk]]}}
 | glotto = tach1250
-| glottorefname = Tachelhit
+| glottorefname = Tasusit
 }}
 
 [[File:WIKITONGUES- Abderrahman speaking Tachelhit.webm|thumb|Amerruki yettmeslay s Tsusit.]]
