*Empty MediaWiki Message*

--- a/Tutlayt_tacelḥit.mw
+++ b/Tutlayt_tacelḥit.mw
@@ -26,13 +26,13 @@ deg tmurt n [[Ameṛṛuk|umeṛṛuk]], Tasusit d yiwet seg [[tutlayin timaziɣ
 
 Tella di tmezdalt n Wikimedia [[incubator:Wp/shi|tirimt n Wikipedia s tcelḥiyt]].
 
-==Awalen iberraniyen deg Tcelḥiyt==
+==Awalen iberraniyen deg Tsusit==
 
 Kra n wawalen i d-yekkan seg Teɛrabt :
  {| class="wikitable alternance"
  |-
- ! scope="col" | Tacelḥit
- ! scope="col" | Taɛrabt
+ ! scope="col" | Tasusit
+ ! scope="col" | Taserɣint
  ! scope="col" | Taqbaylit
  |-
  | Aferran
