/* Awalen iberraniyen deg Tsusit */

--- a/Tutlayt_tacelḥit.mw
+++ b/Tutlayt_tacelḥit.mw
@@ -36,23 +36,23 @@ Kra n wawalen i d-yekkan seg Teɛrabt :
  ! scope="col" | Taqbaylit
  |-
  | Aferran
- | Ferran
+ | Ferran فران
  | Afurnu
  |-
  | Aḥeddad
- | Ḥeddad
- | Aḥeddad, Amẓal
+ | Ḥeddad حداد
+ | Amzil, Amẓal
  |-
  | Axemmas
- | Xemmas
- | Axemmas
+ | Xemmas خماس
+ | Axemmas, amsemmus
  |-
  | Agezzar
- | Ǧezzar
+ | Ǧezzar جزار
  | Agezzar
  |-
  | Acettab
- | Cettab
+ | Cettab شطاب
  | Amedwas
  |-
  |}
