*Empty MediaWiki Message*

--- a/Iẓiwec_n_wexxam.mw
+++ b/Iẓiwec_n_wexxam.mw
@@ -33,7 +33,7 @@ Yezmer ad yili [[Afraw|ufraw]] n iẓiwec s [[tasnalɣawt tazifit|yiniten yemgar
 == Tudert ==
 
 == Ẓeṛ daɣen ==
-* [[Ayllal]]
+* [[Aylal]]
 
 [[Category:iylalen]]
 [[Category:igṭaṭ]] 
