*Empty MediaWiki Message*

--- a/Iẓiwec_n_wexxam.mw
+++ b/Iẓiwec_n_wexxam.mw
@@ -1,11 +1,12 @@
 {{Automatic taxobox}}
-'''iẓiwec wexxam''' ('''[[Assaɣ ussnan]]''': ''Passer domesticus'') d [[aylal]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[iẓiwcen|iẓiwcen]] yettidir deg waṭas n yidgan n umadal deg [[Turuft]] d [[Tafriqt n Ugafa|Tefriqtn Ugafa]] D wazal ameqran n [[Asya]] d [[Tamrikt n Ugafa|Marikan n Ugafa]], iẓiwec n wexxam d win yettidiren deg yidgan iɣarimen (anda ttilin imezdaɣ) ama deg [[taddart|tuddar]] neɣ di temdinin <br/> 
-Deg tama tadelsant iẓiwec iga d [[agṭiṭ]] yettwastaɣen (yettwaḥqaren) acku itett [[ifes|ifsan]] deg urriyen n ikerrazen. Ayen yeǧǧan amdan-is ad yader s waṭas ɣas akken yettidir deg waṭas n yidgan n umadal maca [[addad n taggaẓt|addad-is n taggaẓt]] yettujerred d akken-it d [[talmest ur tettwaggez|talmest ur nettwaggez]]
+'''Iẓiwec n wexxam''' ('''[[Assaɣ ussnan]]''': ''Passer domesticus'') d [[aylal]] yeṭṭafaren [[tawacult (tasnudert)|tawacult]] n [[iẓiwcen|iẓiwcen]] yettidir deg waṭas n yidgan n umadal deg [[Turuft]] d [[Tafriqt n Ugafa|Tefriqtn Ugafa]] D wazal ameqran n [[Asya]] d [[Tamrikt n Ugafa|Marikan n Ugafa]], iẓiwec n wexxam d win yettidiren deg yidgan iɣarimen (anda ttilin imezdaɣ) ama deg [[taddart|tuddar]] neɣ di temdinin.
+
+Deg tama tadelsant iẓiwec iga d [[agṭiṭ]] yettwastaɣen (yettwaḥqaren) acku itett [[ifes|ifsan]] deg urriyen n ikerrazen. Ayen yeǧǧan amdan-is ad yader s waṭas ɣas akken yettidir deg waṭas n yidgan n umadal maca [[addad n taggaẓt|addad-is n taggaẓt]] yettujerred d akken-it d [[talmest ur tettwaggez|talmest ur nettwaggez]].
 
 == Aglam ==
 '''Talɣa d ubleɣ'''
 Teɣzi n iẓiwec seg yixef-is ar taggara n [[asallaf|wedfar-is]] 16 cm. Ma d tehri-ynes mi ara ad yeldi [[afriw|afriwen-is]] seg 14 ar 18 cm ayen ar t-yeǧǧen d [[aylal]] meẓẓiyen, ixef-is yezzi, [[aqamum|aqamum-is]] d win yuddsen (iǧehden) talɣa-ynes tga d takawsart, dɣa teɣzi n uqamum-is seg 1 ar 1,5 cm [[Assezgi|yessezgi]] akken iwata i wakken ad yečč [[ifes|ifsan]], teɣzi n wedfar-is seg 5,2 ar 6,5 cm, ma d teɣzi n [[afriw iṭefsen|udinan n ufriw]] seg 6,7 ar 8,9 cm, [[tinci]] tga gar 1,6 d 2,5 cm, [[azuk]] n iẓiwec iga gar 24g ar 39,5g <br/>
-Takura n [[awtem|iwetmen]] tugar tin n [[tawtemt|twetmin]] s kra, yerna yella umgarad gar tkura deg telmas yettidiren deg Turuft (yettawṭen ar 30g) yugaren tilmas tifurkanin yettidiren s anẓul n Turuft (26g) 
+Takura n [[awtem|iwetmen]] tugar tin n [[tawtemt|twetmin]] s kra, yerna yella umgarad gar tkura deg telmas yettidiren deg Turuft (yettawṭen ar 30g) yugaren tilmas tifurkanin yettidiren s anẓul n Turuft (26g).
 
 '''[[Afraw]]'''
 
