--- a/Iẓiwec_n_wexxam.mw
+++ b/Iẓiwec_n_wexxam.mw
@@ -19,7 +19,7 @@ Takura n [[awtem|iwetmen]] tugar tin n [[tawtemt|twetmin]] s kra, yerna yella um
 |footer=Afraw n uwtem deg tsemhuyt n [[amyaraw|umyaraw]] (s azelmaṭ) d ufraw-is mi ara ad tt-fakk tsemhuyt n umyaraw neɣ send ma ad tebdu (s ayeffus)
 }}
 
-Yezmer ad yili [[Afraw|ufraw]] n iẓiwec s [[tasnalɣawt tazifit|yiniten yemgaraden]] seg uzunɣid ar waras, akken yella wemgarad meqqren gar yini n uwtem d yini n tewtemt, Anda tawtemt tla (tesɛa) ini aras d uwṛiɣ deg ufella d wadda n uqerru, ma d awtem ila (yesɛa) initen d ibeṛbacen deg uqerru azagur-is d uzwiɣ (imal ar uzeggaɣ) ma d tama n ufella deg tafekka-ynes d tazunɣidt 
+Yezmer ad yili [[Afraw|ufraw]] n iẓiwec s [[tasnalɣawt tazifit|yiniten yemgaraden]] seg uzunɣid ar waras, akken yella wemgarad meqqren gar yini n uwtem d yini n tewtemt, Anda tawtemt tla (tesɛa) ini aras d uwṛiɣ deg ufella d wadda n uqerru, ma d awtem ila (yesɛa) initen d ibeṛbacen deg uqerru azagur-is d uzwiɣ (imal ar uzeggaɣ) ma d tama n ufella deg tafekka-ynes d tazunɣidt.
 
 '''Imesli'''
 
