*Empty MediaWiki Message*

--- a/Talmest_ur_tettwaggez.mw
+++ b/Talmest_ur_tettwaggez.mw
@@ -1,1 +1,1 @@
-'''Talmest ur tettwaggez''' ('''LC''') d yiwet n tasartut neɣ n usismel deg [[addad n taggaẓt|waddad n taggaẓt]] yeṭṭafaren [[Umuɣ azeggaɣ n IUCN]] yettusxedmen i weglam (awṣaf) n [[amuddir|imuddiren]] ur nettwaggez ara i [[angar|wengar]] am [[Tizizwit|tzizwa]] d [[Tafunast|tfunasin]] d [[Mejjir]] akk d [[afgan|ifganen]], Maca asexdem n tsartut-a ur tettili ara alamma yeddadet (yettḥeqq) seg [[amdan|imdanen]] n imuddiren imidduren (i mazal ddren), Ar tura llan ugar n 14030 n [[talmest|telmas]] n iɣersiwen d 15000 n telmas n [[imɣi|yemɣan]] s ddaw n tsartut-a
+'''Talmest ur tettwaggez''' ('''LC''') d yiwet n tasartut neɣ n usismel deg [[addad n taggaẓt|waddad n taggaẓt]] yeṭṭafaren [[Umuɣ azeggaɣ n IUCN]] yettusxedmen i weglam (awṣaf) n [[amuddir|imuddiren]] ur nettwaggez ara i [[angar|wengar]] am [[Tizizwit|tzizwa]] d [[Tafunast|tfunasin]] d [[Mejjir]] akk d [[afgan|ifganen]], Maca asexdem n tsartut-a ur tettili ara alamma yeddadet (yettḥeqq) seg [[amdan|imdanen]] n imuddiren imidduren (i mazal ddren), Ar tura llan ugar n 14030 n [[talmest|telmas]] n iɣersiwen d 15000 n telmas n [[imɣi|yemɣan]] s ddaw n tsartut-a.
