*Empty MediaWiki Message*

--- a/Ibeldisen.mw
+++ b/Ibeldisen.mw
@@ -1,8 +1,8 @@
 {{Automatic taxobox}}
-'''Ibeldisen''' ([[Assaɣ ussnan]]: ''Gastropoda'') d [[asmil (tasnudert)|asmil]] meqqren yakk deg [[astirf (tasnudert)|wadur]] n [[Tigri|tigritin]] acku dges azal n 80% n [[talmest|telmas]] yeṭṭafaren adur-a, akken daɣen i tga d tafesna tameqrant tis snat yakk deg [[aɣersiw|tgelda taɣersawt]] anda i llant dges wazal n 65000 n telmas gar-asent [[aɣlal]] d [[Amillus|umillus]] d [[tazɣurt|tezɣurt]] 
+'''Ibeldisen''' ([[Assaɣ ussnan]]: ''Gastropoda'') d [[asmil (tasnudert)|asmil]] meqqren yakk deg [[astirf (tasnudert)|wadur]] n [[Tigri|tigritin]] acku dges azal n 80% n [[talmest|telmas]] yeṭṭafaren adur-a, akken daɣen i tga d tafesna tameqrant tis snat yakk deg [[aɣersiw|tgelda taɣersawt]] anda i llant dges wazal n 65000 n telmas gar-asent [[aɣlal]] d [[Amillus|umillus]] d [[tazɣurt|tezɣurt]].
 
 Azal ameqran n ibeldisen lan (sɛan) [[ajeɣlal]] amyiwen ddurayen yis, ijeɣlalen-a ttilin d ubrinen <br/>
-Ibeldisen ttidiren deg waṭas n twennaṭin n umadal, Amur ameqran degsen deg waman anda ugar n 3000 n telmas n ibeldisen ttidiren s ddaw n waman n [[ilel|illan]] d [[agaraw|igarawen]] yakk d 5000 n telmas n idem ttidiren deg [[aman iẓidanen|waman iẓidanen]] ([[asif|isafen]], [[iɣzeṛ|iɣezṛawen]], [[agelmim|igelmimen]]) ma d tilmas id yegran ttidirent sufel n tegnit (lqaɛa), Azal ameqran n ibeldisen tetten [[imɣan]] akken i llant telmas tettent isugar igemnawen akken daɣen i llant kra n telma d [[timseksumin]] yerna gant d [[uɣes|timuɣas]]
+Ibeldisen ttidiren deg waṭas n twennaṭin n umadal, Amur ameqran degsen deg waman anda ugar n 3000 n telmas n ibeldisen ttidiren s ddaw n waman n [[ilel|illan]] d [[agaraw|igarawen]] yakk d 5000 n telmas n idem ttidiren deg [[aman iẓidanen|waman iẓidanen]] ([[asif|isafen]], [[iɣzeṛ|iɣezṛawen]], [[agelmim|igelmimen]]) ma d tilmas id yegran ttidirent sufel n tegnit (lqaɛa), Azal ameqran n ibeldisen tetten [[imɣan]] akken i llant telmas tettent isugar igemnawen akken daɣen i llant kra n telma d [[timseksumin]] yerna gant d [[uɣes|timuɣas]].
 
 == Aglam ==
 '''tasnasileɣt''': 
@@ -25,19 +25,19 @@ Tuget neɣ azal ameqran n ibeldisen gan d [[Abrawtem|iberwetmen]], isin n talwiy
 == Agar, tasensartut d usru ==
 
 === Amezruy amhazan ===
-Ibeldisen gan d tagrawt taɣersawt tameqrant yakk seld n [[aburɣas|iburɣas]] anda llant 40000 n telmas d timiddurin, banen-d ɣer tudert send n 600 [[ms]], akken igan d [[Tigri|tigritin]] timyiwnin iy sselken tagnit imedlen, Amezruy amhazan n ibeldisen yettwassnen s [[tamhazt|temhazt]] n talɣa n [[ajeɣlal|ijeɣlalen-nsen]] 
+Ibeldisen gan d tagrawt taɣersawt tameqrant yakk seld n [[aburɣas|iburɣas]] anda llant 40000 n telmas d timiddurin, banen-d ɣer tudert send n 600 [[ms]], akken igan d [[Tigri|tigritin]] timyiwnin iy sselken tagnit imedlen, Amezruy amhazan n ibeldisen yettwassnen s [[tamhazt|temhazt]] n talɣa n [[ajeɣlal|ijeɣlalen-nsen]].
 
 === Tasensartur ===
-Irem n ''Gasteropoda'' (igan d [[assaɣ ussnan]] n ibeldisen) yekka-d seg sin n wawalen [[tagrikt tamzikt|igriken]] γαστήρ (gastêr), « Adis », d πούς (poús), « Aṭar »
+Irem n ''Gasteropoda'' (igan d [[assaɣ ussnan]] n ibeldisen) yekka-d seg sin n wawalen [[tagrikt tamzikt|igriken]] γαστήρ (gastêr), « Adis », d πούς (poús), « Aṭar ».
 
 === Agar ===
 
 === Asismel amensay ===
 Deg usismel amzikan (aqbur), amedya deg wagla n  [[Johannes Thiele]] (1929-1935), llan 3 n [[adu-smil|idu-smilen]] ibuda: 
 
-* [[Ifeckdaten]] (''Prosobranchia''): d iɣersiwen [[ilel|iwlalen]], lan (sɛan) [[Afuck|iɣenwazen]] deg tazwara (zdat) n tfekka s udem n wul
-* [[Ifeckdfiren]] (''Opisthobranchia''): Yakk nsen d iwlalen, lan (sɛan) [[afuck]] (iɣenwazen) s deffir n tfekka, Am [[tiferdarin]] (''Pteropoda'') i [[Assezgi|yessezgen]] ar tudert tassuflant 
-* [[Tinturin]] (''Pulmonata''): Ilan (yesɛan) [[turin]] (aberfiw) deg yideg n ifecka maca kra deg-sent (am [[Alemnis|ilemnisen]]) uɣalen ar tudert deg waman
+* [[Ifeckdaten]] (''Prosobranchia''): d iɣersiwen [[ilel|iwlalen]], lan (sɛan) [[Afuck|iɣenwazen]] deg tazwara (zdat) n tfekka s udem n wul.
+* [[Ifeckdfiren]] (''Opisthobranchia''): Yakk nsen d iwlalen, lan (sɛan) [[afuck]] (iɣenwazen) s deffir n tfekka, Am [[tiferdarin]] (''Pteropoda'') i [[Assezgi|yessezgen]] ar tudert tassuflant.
+* [[Tinturin]] (''Pulmonata''): Ilan (yesɛan) [[turin]] (aberfiw) deg yideg n ifecka maca kra deg-sent (am [[Alemnis|ilemnisen]]) uɣalen ar tudert deg waman.
 
 == Ẓeṛ daɣen ==
 * [[Aɣlal]]
