--- a/Ibeldisen.mw
+++ b/Ibeldisen.mw
@@ -11,16 +11,16 @@ Ibeldisen ttidiren deg waṭas n twennaṭin n umadal, Amur ameqran degsen deg w
 
 Ibeldisen s umata d iɣersiwen irazamalen (''asymétriques'') anda tafekka-ynes tebṭa ar 3 n ismilen ufrizen: 
 
-* Ar zdat, ixef deg tazwara-s llant [[timerna|tmerna]] dɣa deg taggara-nsent i llant wallen 
-* S adis, Aṭar yessehrin deg uṭebsi, tikwal yettuɣal d agman i [[ardab|werdab]] 
-* S azagur, Takura tedduffes, tikwal d tamazzuft maca deg waṭas n wakuden yezzi-yas ujeɣlal
+* Ar zdat, ixef deg tazwara-s llant [[timerna|tmerna]] dɣa deg taggara-nsent i llant wallen.
+* S adis, Aṭar yessehrin deg uṭebsi, tikwal yettuɣal d agman i [[ardab|werdab]].
+* S azagur, Takura tedduffes, tikwal d tamazzuft maca deg waṭas n wakuden yezzi-yas ujeɣlal.
 
-[[Tigri|tigritin-a]] gant d [[ayenuzzuf|tiynuzufin]] neɣ [[tiberrawtemt|iberwetmen]], [[Timseddert]] neɣ [[tamarrawt]]
+[[Tigri|tigritin-a]] gant d [[ayenuzzuf|tiynuzufin]] neɣ [[tiberrawtemt|iberwetmen]], [[Timseddert]] neɣ [[tamarrawt]].
 
 '''Amyaraw'''
-Tuget neɣ azal ameqran n ibeldisen gan d [[Abrawtem|iberwetmen]], isin n talwiyin ttmiqqanen tisiqsin-nsen w ttembadalen [[Agamit|igamiten]] n [[awtem|iwetmen]] s akin ad asen igamiten n [[tawtemt|twetmin]] i wakken [[arruw|ad myarrwen]] 
+Tuget neɣ azal ameqran n ibeldisen gan d [[Abrawtem|iberwetmen]], isin n talwiyin ttmiqqanen tisiqsin-nsen w ttembadalen [[Agamit|igamiten]] n [[awtem|iwetmen]] s akin ad asen igamiten n [[tawtemt|twetmin]] i wakken [[arruw|ad myarrwen]].
 
-[[Tugna:Kissingsnails.jpg|thumb|260px|sin n [[aɣlal|yiɣlalen]] temyussanen send ma ad [[amercel|mmircalen]]]]
+[[Tugna:Kissingsnails.jpg|thumb|260px|sin n [[aɣlal|yiɣlalen]] temyussanen send ma ad [[amercel|mmircalen]]]].
 
 == Agar, tasensartut d usru ==
 
