*Empty MediaWiki Message*

--- a/Skikda.mw
+++ b/Skikda.mw
@@ -1,5 +1,5 @@
 {{Infobox city}}
-'''Skikda''' (isem-is n zik Philippeville<ref name="WDL">http://www.wdl.org/en/item/8816/</ref>) d tamdint d [[wilaya]] n [[Dzayer]].
+'''Skikda''' (isem-is n zik Philippeville<ref name="WDL">http://www.wdl.org/en/item/8816/</ref>) d tamdint seg tmurt n [[Lezzayer]]. Skikda d tamanaɣt n [[Tawilayt n Skikda|twilayt n Skikda]].
 
 ==Tiɣiwanin n Skikda==
 
