*Empty MediaWiki Message*

--- a/Skikda.mw
+++ b/Skikda.mw
@@ -18,6 +18,6 @@
 
 <references/>
 
-{{Agni n Tiɣiwanin n twilayt n Skikda}}
+{{Tawilayt n Skikda}}
 
 [[Taggayt:timdinin]][[Category:Taɣiwant n Skikda]]
