--- a/Skikda.mw
+++ b/Skikda.mw
@@ -1,21 +1,7 @@
 {{Infobox city}}
 '''Skikda''' (isem-is n zik Philippeville<ref name="WDL">http://www.wdl.org/en/item/8816/</ref>) d tamdint seg tmurt n [[Lezzayer]]. Skikda d tamanaɣt n [[Tawilayt n Skikda|twilayt n Skikda]].
 
-==Tiɣiwanin n Skikda==
-
-*[[Wlad Ɛṭeya]]
-*[[Izerdazen]] (Zardaza)
-*[[Tamalus]]
-*[[Leḥdayeq]]
-*[[Bni Welban]] (At Welban)
-*[[Lqull]]
-*[[Mjezz Ddcic]]
-*[[Sidi Ɛekkaca]]
-*[[Ɛezzaba]]
-*Um Ṭṭub
-*[[Lḥerruc]] 
-*[[Bucṭaṭa]]
-
+==Tiwelhiwin==
 <references/>
 
 {{Tawilayt n Skikda}}
