*Empty MediaWiki Message*

--- a/Ibeldisen.mw
+++ b/Ibeldisen.mw
@@ -39,6 +39,15 @@ Deg usismel amzikan (aqbur), amedya deg wagla n  [[Johannes Thiele]] (1929-1935)
 * [[Ifeckdfiren]] (''Opisthobranchia''): Yakk nsen d iwlalen, lan (sɛan) [[afuck]] (iɣenwazen) s deffir n tfekka, Am [[tiferdarin]] (''Pteropoda'') i [[Assezgi|yessezgen]] ar tudert tassuflant.
 * [[Tinturin]] (''Pulmonata''): Ilan (yesɛan) [[turin]] (aberfiw) deg yideg n ifecka maca kra deg-sent (am [[Alemnis|ilemnisen]]) uɣalen ar tudert deg waman.
 
+=== Asismel atrar ===
+S unect (ɛla ḥsab) n [[Aseklas agreɣlan n telmas tiwlalin|useklas agreɣlan n telmas tiwlalin]] (deg 24 ctember 2104)
+
+* Adu-smil n [[ibeldisen itraren]] (''Caenogastropoda'') — Cox, 1960
+** Tafesna n [[ Architaenioglossa]] — Haller, 1890
+** Tafesna n [[Littorinimorpha]] — Golikov & Starobogatov, 1975
+** Tafesna n [[[[ibeldisen imaynuten]] (''Neogastropoda'') — Thiele, 1929
+** Caenogastropoda (ur tettwasismel)
+
 == Ẓeṛ daɣen ==
 * [[Aɣlal]]
 * [[Tiruca]]
