Reverted edits by [[Special:Contribs/2601:42:1:6820:D19F:3E6B:D764:2D39|2601:42:1:6820:D19F:3E6B:D764:2D39]] ([[User talk:2601:42:1:6820:D19F:3E6B:D764:2D39|talk]]) to last version by Sami At Ferḥat: ???

--- a/Bgayet.mw
+++ b/Bgayet.mw
@@ -1,6 +1,6 @@
 {{Infobox city}}
 
-'''Vgayet''' d tamanaɣt udem-is akk d usagen meqqren n [[tmurt n leqbayel]]. S wazal n 1, 000 000 n imezdaɣ (2006) Bgayet d rruḥ (iman) n wegdud aqbayli. Sennig n teglest armi d tura, Bgayet ttmmehreged yakk imdanen i tt-izedɣen neɣ i tt-iqurben.
+'''Bgayet''' d tamanaɣt udem-is akk d usagen meqqren n [[tmurt n leqbayel]]. S wazal n 1, 000 000 n imezdaɣ (2006) Bgayet d rruḥ (iman) n wegdud aqbayli. Sennig n teglest armi d tura, Bgayet ttmmehreged yakk imdanen i tt-izedɣen neɣ i tt-iqurben.
 
 == Amezruy ==
 [[Tugna:Bougie-ville.jpg|right|200px|thumb|'''Bgayet,Vgayet''' n zik]]
