*Empty MediaWiki Message*

--- a/Yulyu.mw
+++ b/Yulyu.mw
@@ -1,4 +1,4 @@
-{{Ayyuren}}
+{{Month header}}
 {{Yulyu}}
 '''Yulyu''' d [[ayyur]] {{exp|wis}}7 n [[aseggas|useggas]]. Deg-s 31 wussan. Isem-is yekka seg [[tlatinit]] ''Iulius'', isem n [[Yulyus Sizar]], amenukal n Rum, win isemma ayyur-agi.
 
