*Empty MediaWiki Message*

--- a/Furar.mw
+++ b/Furar.mw
@@ -1,4 +1,4 @@
-{{Ayyuren}}
+{{Month header}}
 {{Furar}}
 '''Furar''' d [[ayyur]] {{exp|wis}}2 n [[aseggas|useggas]]. Deg-s 28 wussan ; kull 4 iseggasen irennu ass igan 29. Isem-is yekka seg [[talatinit|tlatinit]] ''Februarius''.
 
