--- a/Mayyu.mw
+++ b/Mayyu.mw
@@ -1,4 +1,4 @@
-{{Ayyuren}}
+{{Month header}}
 {{Mayyu}}
 '''Mayyu''' (ittwanṭaq daɣen '''maggu''') d [[ayyur]] {{exp|wis}}5 n [[aseggas|useggas]]. Deg-s 31 n wussan.
 [[Image:Frères_Limbourg_-_Très_Riches_Heures_du_duc_de_Berry_-_mois_de_mai_-_Google_Art_Project.jpg|thumb|Mayyu, amkus n ''[[Les Très Riches Heures du duc de Berry|Isragen inesbuɣar aṭas n Duc de Berry]]'' (ɣer 1410-1416), [[asalay Condé]], Chantilly, Fransa ms.65, f.5.]]
