*Empty MediaWiki Message*

--- a/Wamber.mw
+++ b/Wamber.mw
@@ -1,4 +1,4 @@
-{{Ayyuren}}
+{{Month header}}
 {{Wember}}
 '''Wamber''' (neɣ '''nwamber''', '''nunber''', '''nunember''') d [[ayyur]] {{exp|wis}}11 n [[aseggas|useggas]]. Yella daɣen ayyur {{exp|wis}}3 n [[lexrif|wamwal (lexrif)]] deg wezgen n ugafa n umaḍal ; ayyur {{exp|wis}}3 n [[tafsut|tefsut]] deg wezgen n wanẓul.
 
