--- a/Meɣres.mw
+++ b/Meɣres.mw
@@ -1,4 +1,4 @@
-{{Ayyuren}}
+{{Month header}}
 {{Meɣres}}
 '''Meɣres''' d ayyur {{exp|wis}}3 n useggas.
 [[Image:Les Très Riches Heures du duc de Berry mars.jpg|thumb|Meɣres, amkus n ''[[Les Très Riches Heures du duc de Berry|Isragen inesbuɣar aṭas n Duc de Berry]]'' (ɣer 1410-1416 dɣa iseggasen 1440), [[asalay Condé]], Chantilly, Fransa ms.65, f.3.]]
