--- a/Ctember.mw
+++ b/Ctember.mw
@@ -1,6 +1,6 @@
-{{Ayyuren}}
+{{Month header}}
 {{Ctember}}
-'''Ctember''' d [[ayyur]] {{exp|wis}}9 n [[aseggas|useggas]]. Deg-s 30 wussan.
+'''Ctember''' d [[ayyur]] wis 9 n [[aseggas|useggas]]. Deg-s 30 wussan.
 
 [[Image:Les Très Riches Heures du duc de Berry septembre.jpg|thumb|ctember, amkus n ''[[Les Très Riches Heures du duc de Berry|Isragen inesbuɣar aṭas n Duc de Berry]]'' (ɣer 1440), [[asalay Condé]], Chantilly, Fransa ms.65, f.9.]]
 
