--- a/Furar.mw
+++ b/Furar.mw
@@ -1,6 +1,6 @@
 {{Month header}}
 {{Furar}}
-'''Furar''' d [[ayyur]] {{exp|wis}}2 n [[aseggas|useggas]]. Deg-s 28 wussan ; kull 4 iseggasen irennu ass igan 29. Isem-is yekka seg [[talatinit|tlatinit]] ''Februarius''.
+'''Furar''' d [[ayyur]] wis 2 n [[aseggas|useggas]]. Deg-s 28 wussan ; kull 4 iseggasen irennu ass igan 29. Isem-is yekka seg [[talatinit|tlatinit]] ''Februarius''.
 
 [[Image:Les Très Riches Heures du duc de Berry février.jpg|thumb|Fuṛaṛ, amkus n ''[[Les Très Riches Heures du duc de Berry|Isragen inesbuɣar aṭas n Duc de Berry]]'' (ɣer 1410-1416), [[asalay Condé]], Chantilly, Fransa ms.65, f.2.]]
 [[Tugna:Februar_Leandro_Bassano.jpg|thumb|200px|right|''Fuṛaṛ'', Leandro Bassano (ɣer 1595-1600).]]
