*Empty MediaWiki Message*

--- a/Yunyu.mw
+++ b/Yunyu.mw
@@ -1,6 +1,6 @@
 {{Month header}}
 {{Yunyu}}
-'''Yunyu''' d ayyur {{exp|wis}}6 n useggas.
+'''Yunyu''' d ayyur wis 6 n useggas.
 
 [[Image:Les Très Riches Heures du duc de Berry juin.jpg|thumb|Yunyu, amkus n ''[[Les Très Riches Heures du duc de Berry|Isragen inesbuɣar aṭas n Duc de Berry]]'' (ɣer 1410-1416 dɣa iseggwasen 1440), [[asalay Condé]], Chantilly, Fransa ms.65, f.6.]]
 
