--- a/Ɣuct.mw
+++ b/Ɣuct.mw
@@ -1,6 +1,6 @@
 {{Month header}}
 {{Ɣuct}}
-'''Ɣuct''' d ayyur {{exp|wis}}8 n useggas.
+'''Ɣuct''' d ayyur wis 8 n useggas.
 
 [[Image:Les Très Riches Heures du duc de Berry aout.jpg|thumb|Ɣuct, amkus n ''[[Les Très Riches Heures du duc de Berry|Isragen inesbuɣar aṭas n Duc de Berry]]'' (ɣer 1410-1416), [[asalay Condé]], Chantilly, Fransa ms.65, f.8.]]
 [[Taggayt:Ayyuren]]
