*Empty MediaWiki Message*

--- a/Tuber.mw
+++ b/Tuber.mw
@@ -1,6 +1,6 @@
 {{Month header}}
 {{Tuber}}
-'''Tuber''' d ayyur {{exp|wis`}}10 n useggas.
+'''Tuber''' d ayyur wis 10 n useggas.
 [[Image:Les Très Riches Heures du duc de Berry octobre.jpg|thumb|Tuber, amkus n ''[[Les Très Riches Heures du duc de Berry|Isragen inesbuɣar aṭas n Duc de Berry]]'' (ɣer 1440), [[asalay Condé]], Chantilly, Fransa ms.65, f.10.]]
 
 [[Taggayt:Ayyuren]]
