*Empty MediaWiki Message*

--- a/ReLoad.mw
+++ b/ReLoad.mw
@@ -1,4 +1,4 @@
-{{Infobox music}}
+{{Databox}}
 '''''ReLoad''''' d isem n uḍebsi wis sebɛa n [[Metallica]], yeffeɣ-d deg useggas n 1997.
 
 == Umuɣ n tizlatin ==
