--- a/Kill_'Em_All.mw
+++ b/Kill_'Em_All.mw
@@ -1,4 +1,4 @@
-{{Infobox music}}
+{{Databox}}
 '''''Kill 'Em All''''' d isem n uḍebsi amezwaru n [[Metallica]], yeffeɣ-d deg useggas n 1983.
 == Umuɣ n tizlatin ==
 
