--- a/Lettre_ouverte_aux....mw
+++ b/Lettre_ouverte_aux....mw
@@ -3,36 +3,34 @@ Aḍebsi agi n [[Lwennas Meɛṭub]] yettwasemman '''''Lettre ouverte aux...''''
 
 {{Clr}}
 == Umuɣ n tizlatin ==
-{{tizlatin
-|azwel = Aḍebsi 1 - Tabratt i lḥekam
-|aɣrud_akud = 
-| tizlit1 = Ayen ayen
-| akud1 = 4:35
-| tizlit2 = A tamɣart
-| akud2 = 6:38
-| tizlit3 = Ifut lawan
-| akud3 = 4:37
-| tizlit4 = Nezga
-| akud4 = 4:24
-| tizlit5 = Tabratt i lḥekam
-| akud5 = 21:08
+{{Track listing
+|headline = Aḍebsi 1 - Tabratt i lḥekam
+| title1 = Ayen ayen
+| length1 = 4:35
+| title2 = A tamɣart
+| length2 = 6:38
+| title3 = Ifut lawan
+| length3 = 4:37
+| title4 = Nezga
+| length4 = 4:24
+| title5 = Tabratt i lḥekam
+| length5 = 21:08
 }}
 
-{{tizlatin
-|azwel = Aḍebsi 2 - Iluḥq-ed zzhir
-|aɣrud_akud = 
-| tizlit1 = Ur sḥissif ara
-| akud1 = 7:20
-| tizlit2 = Iluḥq-ed zzhir
-| akud2 = 4:53
-| tizlit3 = Ddu d webrid-ik a l'ḥif
-| akud3 = 4:34
-| tizlit4 = Yehwa-yam
-| akud4 = 4:24
-| tizlit5 = Beddeɣ di tizi
-| akud5 = 5:14
-| tizlit6 = Sers iman-ik
-| akud6 = 6:11
+{{Track listing
+|headline = Aḍebsi 2 - Iluḥq-ed zzhir
+| title1 = Ur sḥissif ara
+| length1 = 7:20
+| title2 = Iluḥq-ed zzhir
+| length2 = 4:53
+| title3 = Ddu d webrid-ik a l'ḥif
+| length3 = 4:34
+| title4 = Yehwa-yam
+| length4 = 4:24
+| title5 = Beddeɣ di tizi
+| length5 = 5:14
+| title6 = Sers iman-ik
+| length6 = 6:11
 }}
 
 
