--- a/Lettre_ouverte_aux....mw
+++ b/Lettre_ouverte_aux....mw
@@ -18,7 +18,7 @@ Aḍebsi agi n [[Lwennas Meɛṭub]] yettwasemman '''''Lettre ouverte aux...''''
 }}
 
 {{Track listing
-|headline = Aḍebsi 2 - Iluḥq-ed zzhir
+|headline = Aḍebsi 2 - Iluḥq-d zzhir
 | title1 = Ur sḥissif ara
 | length1 = 7:20
 | title2 = Iluḥq-ed zzhir
