*Empty MediaWiki Message*

--- a/Lettre_ouverte_aux....mw
+++ b/Lettre_ouverte_aux....mw
@@ -1,10 +1,10 @@
 {{Databox}}
-Aḍebsi agi n [[Lwennas Meɛṭub]] yettwasemman '''''Lettre ouverte aux...''''' (Tabratt i lḥekam) d aḍebsi ines aneggaru.
+Aḍebsi agi n [[Lwennas Meɛṭub]] yettwasemman '''''Lettre ouverte aux...''''' (Tabratt i lḥekkam) d aḍebsi ines aneggaru.
 
 {{Clr}}
 == Umuɣ n tizlatin ==
 {{Track listing
-|headline = Aḍebsi 1 - Tabratt i lḥekam
+|headline = Aḍebsi 1 - Tabratt i lḥekkam
 | title1 = Ayen ayen
 | length1 = 4:35
 | title2 = A tamɣart
@@ -13,7 +13,7 @@ Aḍebsi agi n [[Lwennas Meɛṭub]] yettwasemman '''''Lettre ouverte aux...''''
 | length3 = 4:37
 | title4 = Nezga
 | length4 = 4:24
-| title5 = Tabratt i lḥekam
+| title5 = Tabratt i lḥekkam
 | length5 = 21:08
 }}
 
@@ -23,7 +23,7 @@ Aḍebsi agi n [[Lwennas Meɛṭub]] yettwasemman '''''Lettre ouverte aux...''''
 | length1 = 7:20
 | title2 = Iluḥq-ed zzhir
 | length2 = 4:53
-| title3 = Ddu d webrid-ik a l'ḥif
+| title3 = Ddu d webrid-ik a lḥif
 | length3 = 4:34
 | title4 = Yehwa-yam
 | length4 = 4:24
