--- a/Au_nom_de_tous_les_miens.mw
+++ b/Au_nom_de_tous_les_miens.mw
@@ -3,38 +3,36 @@ Aḍebsi agi n [[Lwennas Meɛṭub]] yettwasemman '''''Au nom de tous les miens'
 
 {{Clr}}
 == Umuɣ n tizlatin ==
-{{tizlatin
-|azwel = Aḍebsi 1 - Semeḥtiyi
-|aɣrud_akud = 
-| tizlit1 = Semmeḥt-iyi a leḥbab-iw
-| akud1 = 6:32
-| tizlit2 = Ay ixf-iw
-| akud2 = 7:11
-| tizlit3 = Anda-tt teɛzibt
-| akud3 = 
-| tizlit4 = A baba ṛuh
-| akud4 = 8:04
-| tizlit5 = Ay aḥbib-iw
-| akud5 = 7:42
-| tizlit6 = Imcumen
-| akud6 = 5:25
+{{Track listing
+|headline  = Aḍebsi 1 - Semeḥtiyi
+| title1 = Semmeḥt-iyi a leḥbab-iw
+| length1 = 6:32
+| title2 = Ay ixf-iw
+| length2 = 7:11
+| title3 = Anda-tt teɛzibt
+| length3 = 
+| title4 = A baba ṛuh
+| length4 = 8:04
+| title5 = Ay aḥbib-iw
+| length5 = 7:42
+| title6 = Imcumen
+| length6 = 5:25
 }}
 
-{{tizlatin
-|azwel = Aḍebsi 2 - Sel kan i dderz
-|aɣrud_akud = 
-| tizlit1 = Sel kan i dderz 
-| akud1 = 4:09
-| tizlit2 = Ffeɣ ay ajṛad tamurt-iw
-| akud2 = 10:22
-| tizlit3 = At yetran
-| akud3 = 5:18
-| tizlit4 = Qqurent tregwa
-| akud4 = 5:52
-| tizlit5 = Ay izri yesrindimen
-| akud5 = 9:01
-| tizlit6 = Armi glalzeɣ i faqeɣ
-| akud6 = 4:24
+{{Track listing
+|headline  = Aḍebsi 2 - Sel kan i dderz
+| title1 = Sel kan i dderz 
+| length1 = 4:09
+| title2 = Ffeɣ ay ajṛad tamurt-iw
+| length2 = 10:22
+| title3 = At yetran
+| length3 = 5:18
+| title4 = Qqurent tregwa
+| length4 = 5:52
+| title5 = Ay izri yesrindimen
+| length5 = 9:01
+| title6 = Armi glalzeɣ i faqeɣ
+| length6 = 4:24
 }}
 
 
