--- a/Au_nom_de_tous_les_miens.mw
+++ b/Au_nom_de_tous_les_miens.mw
@@ -4,7 +4,7 @@ Aḍebsi agi n [[Lwennas Meɛṭub]] yettwasemman '''''Au nom de tous les miens'
 {{Clr}}
 == Umuɣ n tizlatin ==
 {{Track listing
-|headline  = Aḍebsi 1 - Semeḥtiyi
+|headline  = Aḍebsi 1 - Semmeḥt-iyi
 | title1 = Semmeḥt-iyi a leḥbab-iw
 | length1 = 6:32
 | title2 = Ay ixf-iw
