*Empty MediaWiki Message*

--- a/Au_nom_de_tous_les_miens.mw
+++ b/Au_nom_de_tous_les_miens.mw
@@ -1,5 +1,5 @@
 {{Databox}}
-Aḍebsi agi n [[Lwennas Meɛṭub]] yettwasemman '''''Au nom de tous les miens''''' d aḍebsi ines {{exp|wis}}27.
+Aḍebsi agi n [[Lwennas Meɛṭub]] yettwasemman '''''Au nom de tous les miens''''' d aḍebsi ines wis 27.
 
 {{Clr}}
 == Umuɣ n tizlatin ==
