*Empty MediaWiki Message*

--- a/Amugay.mw
+++ b/Amugay.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Amuyag''' neɣ '''Amuyag n Tefrikt''', ([[assaɣ usnan]]: ''Syncerus caffer'') d [[aɣersiw]] meqqren n [[tawacult (tasnudert)|twacult]] n [[Tifunasiyin|tfunasiyin]] maca ur ila ara (ur isɛa ara) assaɣ d [[Amugay n waman|umaynag n waman n Asya]], [[Talmest]]-a ur [[agrad|tettwagrad]] ara
+'''Amuyag''' neɣ '''Amuyag n Tefrikt''', ([[assaɣ usnan]]: ''Syncerus caffer'') d [[aɣersiw]] meqqren n [[tawacult (tasnudert)|twacult]] n [[Tifunasiyin|tfunasiyin]] maca ur ila ara (ur isɛa ara) assaɣ d [[Amugay n waman|umaynag n waman n Asya]], [[Talmest]]-a ur [[agrad|tettwagrad]] ara.
 
 == Aglam ==
-Amugay n Tefrikt d yiwet n telmest [[tadusi|yuddsen]] s waṭas, [[Tiddi (tusnakt)|Addud-is]] ar [[tayett|tuyat]] yettawad seg 1 m ar 1,7 m, [[asallaf]]-is seg 75 cm ar 110 cm, ma d [[Azuk|azuk-is]] yettawaṭ seg 500 ar 900 kg
+Amugay n Tefrikt d yiwet n telmest [[tadusi|yuddsen]] s waṭas, [[Tiddi (tusnakt)|Addud-is]] ar [[tayett|tuyat]] yettawad seg 1 m ar 1,7 m, [[asallaf]]-is seg 75 cm ar 110 cm, ma d [[Azuk|azuk-is]] yettawaṭ seg 500 ar 900 kg.
