--- a/17_yennayer.mw
+++ b/17_yennayer.mw
@@ -1,5 +1,5 @@
 {{Yennayer}}
-Ass n 17 yennayer d ass {{exp|wis}}17 n useggas. Llan 348 wussan deffir-s ar taggara n useggas, {{exp|wis}}349 deg iseggasen ''bisekstil''.
+Ass n 17 yennayer d ass wis 17 n useggas. Llan 348 wussan deffir-s ar taggara n useggas, wis 349 deg iseggasen ''bisekstil''.
 
 <center>[[16 yennayer]] - ''17 yennayer'' - [[18 yennayer]]</center>
 
@@ -9,9 +9,9 @@ Ass n 17 yennayer d ass {{exp|wis}}17 n useggas. Llan 348 wussan deffir-s ar tag
 |commons=Category:17 january
 |commons azwel=17 yennayer
 }}
-{{Ass asental}}
 
-{{Agni Izemzan}}
+
+{{Months}}
 
 
 [[Taggayt:Ass n yennayer]]
