*Empty MediaWiki Message*

--- a/Titanik.mw
+++ b/Titanik.mw
@@ -1,5 +1,5 @@
 {{Databox}}
-'''Tiṭanik''' d yiwen n lbabuṛ Abriṭani (agyizi)n [[White Star Line]], yebna s tmenna n [[Joseph Bruce Ismay]] asegwas [[1907]] sɣur [[Thomas Andrews]] i ixedmen ɣer [[Harland & Wolff]]. Lebni n lbabuṛ tebda aseggas [[1909]] di temdint n [[Belfast]], tekfa aseggas [[1912]].
+'''RMS Tiṭanik''' d yiwen n lbabuṛ Abriṭani (agyizi)n [[White Star Line]], yebna s tmenna n [[Joseph Bruce Ismay]] asegwas [[1907]] sɣur [[Thomas Andrews]] i ixedmen ɣer [[Harland & Wolff]]. Lebni n lbabuṛ tebda aseggas [[1909]] di temdint n [[Belfast]], tekfa aseggas [[1912]].
 
 D netta i d lbabuṛ ameqqṛan yettwabnan di ddunit merra, yettekka ɣer classe Olympik akked sin seg sister-ships, [[Olympik]] d [[Briṭanik]].
 
