*Empty MediaWiki Message*

--- a/1_yennayer.mw
+++ b/1_yennayer.mw
@@ -1,6 +1,6 @@
 {{Yennayer}}
-Ass 1{{exp|ru}} yennayer d ass amezwaru n useggas. Llan 364 wussan deffir-s ar taggara n useggas, 365 ma d aseggas bisekstil.
-<center>[[31 dujamber]] - ''1{{exp|ru}} yennayer'' - [[2 yennayer]]</center>
+Ass n '''1 yennayer''' d ass amezwaru n useggas. Llan 364 wussan deffir-s ar taggara n useggas, 365 ma d aseggas bisekstil.
+<center>[[31 dujamber]] - ''1 yennayer'' - [[2 yennayer]]</center>
 
 == Tidyanin ==
 === Timiḍi wis 21 ===
