*Empty MediaWiki Message*

--- a/1_fuṛaṛ.mw
+++ b/1_fuṛaṛ.mw
@@ -1,5 +1,5 @@
 {{Furar}}
-Ass '''1 fuṛaṛ''' d ass wis 32 n useggas. Llan 333 wussan deffir-s ar taggara n useggas, wis 334 deg iseggasen ''bisekstil''.
+Ass n '''1 fuṛaṛ''' d ass wis 32 n useggas. Llan 333 wussan deffir-s ar taggara n useggas, wis 334 deg iseggasen ''bisekstil''.
 <center>[[31 yennayer]] - ''1 fuṛaṛ'' - [[2 fuṛaṛ]]</center>
 
 == Imagraden iqqenen ==
