*Empty MediaWiki Message*

--- a/1_meɣres.mw
+++ b/1_meɣres.mw
@@ -1,5 +1,5 @@
 {{Meɣres}}
-Ass '''1{{exp|ru}} [[meɣres]]''' d ass {{exp|wis}}60 n useggas ({{exp|wis}}61 deg iseggasen ''bisekstil''). Llan 305 wussan deffir-s ar taggara n useggas.
+Ass n '''1 [[meɣres]]''' d ass wis 60 n useggas (wis 61 deg iseggasen ''bisekstil''). Llan 305 wussan deffir-s ar taggara n useggas.
 <center>[[29 fuṛaṛ]] - ''1 meɣres'' - [[2 meɣres]]</center>
 
 == Imagraden iqqenen ==
