--- a/1_ctember.mw
+++ b/1_ctember.mw
@@ -4,6 +4,6 @@
 == Ayen yeḍran ==
 * Ass amezwaru di ctember [[2008]] ymagred ass amenzu g'uggur n remṭan 1429 ɣur yal timura ḥaca inselmen n tammurt n [[Libya]] ẓẓumen ass n [[31 ɣuct]]
 
-{{Agni Izemzan}}
+{{Months}}
 [[Category:Ussan n useggas]]
 {{MonthCategory}}
