*Empty MediaWiki Message*

--- a/1_tuber.mw
+++ b/1_tuber.mw
@@ -1,6 +1,6 @@
 {{Tuber}}
-Ass '''1{{exp|ru}} [[tuber]]''' d ass {{exp|wis}}274 n useggas ({{exp|wis}}275 deg iseggasen ''bisekstil''). Llan 91 wussan deffir-s ar taggara n useggas.
-<center>[[30 ctamber]] - ''1{{exp|ru}} tuber'' - [[2 tuber]]</center>
+Ass n '''1 [[tuber]]''' d ass wis 274 n useggas (wis 275 deg iseggasen ''bisekstil''). Llan 91 wussan deffir-s ar taggara n useggas.
+<center>[[30 ctamber]] - ''1 tuber'' - [[2 tuber]]</center>
 
 == Tidyanin ==
 === [[Timiḍi wisXXI]] ===
@@ -14,7 +14,7 @@ Ass '''1{{exp|ru}} [[tuber]]''' d ass {{exp|wis}}274 n useggas ({{exp|wis}}275 d
 |commons=Category:1 october
 |commons azwel=1ru tuber
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+
+{{Months}}
 
 [[Taggayt:Ass n tuber]]
