*Empty MediaWiki Message*

--- a/1_wamber.mw
+++ b/1_wamber.mw
@@ -1,7 +1,7 @@
 {{wamber}}
 
-Ass '''1{{exp|ru}} [[wamber]]''' d ass {{exp|wis}}305 n useggas ({{exp|wis}}306 deg iseggasen ''bisekstil''). Llan 60 wussan deffir-es ar taggara n useggas.
-<center>[[31 tuber]] - ''1{{exp|ru}} wamber'' - [[2 wamber]]</center>
+Ass n '''1 [[wamber]]''' d ass wis 305 n useggas (wis 306 deg iseggasen ''bisekstil''). Llan 60 wussan deffir-s ar taggara n useggas.
+<center>[[31 tuber]] - ''1 wamber'' - [[2 wamber]]</center>
 
 == Imagraden iqqenen ==
 
@@ -9,8 +9,8 @@ Ass '''1{{exp|ru}} [[wamber]]''' d ass {{exp|wis}}305 n useggas ({{exp|wis}}306 
 |commons=Category:1 november
 |commons azwel=1ru wamber
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+
+{{Months}}
 
 
 [[Taggayt:Ass n wamber]]
