*Empty MediaWiki Message*

--- a/1_dujamber.mw
+++ b/1_dujamber.mw
@@ -1,14 +1,14 @@
 {{dujamber}}
-Ass '''1{{exp|ru}} [[dujamber]]''' d ass {{exp|wis}}335 n useggas ({{exp|wis}}336 deg iseggasen ''bisekstil''). Llan 30 wussan deffir-s ar taggara n useggas.
-<center>[[30 wamber]] - ''1{{exp|ru}} dujamber'' - [[2 dujamber]]</center>
+Ass n '''1 [[dujamber]]''' d ass wis 335 n useggas (wis 336 deg iseggasen ''bisekstil''). Llan 30 wussan deffir-s ar taggara n useggas.
+<center>[[30 wamber]] - ''1 dujamber'' - [[2 dujamber]]</center>
 
 == Imagraden iqqenen ==
 {{Isenfaṛen nniḍen
 |commons=Category:1 december
-|commons azwel=1ru dujamber
+|commons azwel=1 dujamber
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+
+{{Months}}
 
 
 [[Taggayt:Ass n dujamber]]
