--- a/11_ctember.mw
+++ b/11_ctember.mw
@@ -2,6 +2,6 @@
 {{Day}}
 == Ayen yeḍran ==
 * [[2001]] : sin isafagen (ṭṭeyyarat) kecmen g [[World Trade Center]] g teɣremt n [[New York]], yerna wiyaḍ kecmen g [[Axxam amellal|wexxam amellal]] d [[Pentagon]].
-{{Agni Izemzan}}
+{{Months}}
 [[Category:Ussan n useggas]]
 {{MonthCategory}}
